# chatbot-research

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  compose.yaml  fix_prompt.md
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_rag_ingest_job_kind.py  0003_rag_ingest_job_text_files.py  0004_rag_ingest_job_unified_payload.py
backend/app/: __init__.py  db.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  experiment.py  ingest.py  rag.py
backend/app/core/: __init__.py  adapters.py  config.py  field_defaults.py
backend/app/experiment/: __init__.py  activity.py  batch_runner.py  batch_runner_skip_ingest.py  csv_format.py  idle_shutdown.py  ingest_pipeline_registry.py  loaders.py  logic_fingerprints.py  logic_registry.py  ragas_eval.py  research_pair_schema.py  runner.py  runtime_settings.py  schemas.py
backend/app/langfuse/: __init__.py  client.py  config.py  constants.py  conversation_turn_trace.py  metadata.py  noop.py  tracer.py
backend/app/models/: __init__.py  base.py  rag_ingest_job.py
backend/app/rag/: __init__.py  ingest_batch.py  prompts.py  retrieval_service.py  schemas.py
backend/app/rag/ingest_pipeline/: README.md  enums.py  jobs.py  registry.py  runner.py  service.py
backend/app/rag/ingest_pipeline/converters/: __init__.py  markit_pdf_converter.py  pdf_converter.py  text_converter.py
backend/app/rag/ingest_pipeline/converters/pdf_convert_process/: __init__.py  ocr_preprocess.py  pdf_extract.py
backend/app/rag/ingest_pipeline/processors/: __init__.py  upload_multipart.py
backend/app/rag/logic/: __init__.py  chunking.py  embedding.py  experiment_context.py  hybrid_search.py  keyword_search.py  normalizer.py  tokenizer.py  vector_search.py
backend/app/rag/logic/chunking/: __init__.py  chunking_logic_01.py  chunking_logic_02.py  chunking_logic_03.py  chunking_logic_04.py  chunking_logic_05.py  chunking_logic_06.py
backend/app/rag/logic/prompt/: __init__.py  prompt_logic_01.py  prompt_logic_02.py  prompt_logic_03.py  prompt_logic_04.py  prompt_logic_05.py  prompt_logic_06.py  prompt_logic_07.py  prompt_logic_08.py  prompt_logic_09.py  prompt_logic_10.py  prompt_logic_11.py
backend/app/rag/logic/reranking/: __init__.py  reranking_logic_01.py  reranking_logic_02.py  reranking_logic_03.py
backend/app/rag/logic/search/: __init__.py  search_logic_01.py  search_logic_02.py  search_logic_03.py
backend/app/rag/logic/tokenizer/: __init__.py  tokenizer_logic_01.py
backend/app/rag/vectorstore/: __init__.py  chunker.py  vector_db.py
backend/app/repositories/: ingestion_job_repository.py
backend/app/services/: __init__.py  chat_service.py  llm_factory.py
backend/tests/: conftest.py  test_chat.py  test_chunker.py  test_embedding.py  test_experiment_logic.py  test_hybrid_search.py  test_logic_plugins.py  test_normalizer.py  test_pdf_converter.py  test_rag.py  test_rag_ingest_jobs.py  test_rag_pdf.py  test_retrieval_service.py  test_search_facade.py  test_vector_db_embedding_flow.py
docs/: chunking_logic_03_strategy.md  experiment_batch.md  structure_aware_logic06_rerank02_guide.md  structure_aware_logic06_rerank03_guide.md  structure_aware_vector_search_policy.md
init/: run.sh
llm_definitions/: pyproject.toml
llm_definitions/llm_bridges/: __init__.py
llm_definitions/llm_bridges/embedding_provider/: __init__.py  ollama.py  ruri_http.py
llm_definitions/llm_bridges/llm_provider/: __init__.py  ollama.py
outputs/: RP-0001_20260421T055831Z.csv  RP-0001_20260421T065454Z.csv  RP-0001_20260421T074049Z.csv  RP-0001_20260421T100139Z.csv  RP-0001_20260422T021738Z.csv  RP-0001_20260422T023820Z.csv  RP-test-0001_20260422T041455Z.csv  RP-test-0002_20260422T063717Z.csv  (+2 more)
prompts/: chatgpt-01.md  (+2 more)
vector_stores/: pyproject.toml
vector_stores/vectordb/: __init__.py
vector_stores/vectordb/chroma/: __init__.py  client.py  config.py  store.py
vector_stores/vectordb/sample/: __init__.py  config.py  store.py  types.py
(+133 files in other folders)
