[project]
name = "llm_bridges"
version = "0.1.0"
description = "LangChain チャット実装の薄い橋渡し（backend の外。ベンダー差し替えは主にここ）"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_bridges*"]
